# public/swagger.json
@@ -116,14 +116,14 @@
 					"title": {
 						"type": "string"
 					},
-					"IdConsole": {
+					"idConsole": {
 						"type": "number",
 						"format": "double"
 					}
 				},
 				"required": [
 					"title",
-					"IdConsole"
+					"idConsole"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -133,14 +133,14 @@
 					"title": {
 						"type": "string"
 					},
-					"IdConsole": {
+					"idConsole": {
 						"type": "number",
 						"format": "double"
 					}
 				},
 				"required": [
 					"title",
-					"IdConsole"
+					"idConsole"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -282,6 +282,29 @@
 						}
 					}
 				}
+			},
+			"delete": {
+				"operationId": "DeleteReview",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"Reviews"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		},
 		"/games": {
@@ -371,7 +394,7 @@
 				]
 			},
 			"patch": {
-				"operationId": "UpdateConsole",
+				"operationId": "UpdateGame",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -409,6 +432,64 @@
 						}
 					}
 				}
+			},
+			"delete": {
+				"operationId": "DeleteGame",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"Games"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/games/{id}/reviews": {
+			"get": {
+				"operationId": "GetAllGamesByConsoleById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/ReviewDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Games"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		},
 		"/consoles": {
@@ -559,6 +640,41 @@
 						}
 					}
 				}
+			}
+		},
+		"/consoles/{id}/games": {
+			"get": {
+				"operationId": "GetAllGamesByConsoleById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/GameDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Consoles"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		}
 	},
